Moved the mat menu out to fix alignment, Increased header text size

--- a/src/app/app-header/app-header.component.scss
+++ b/src/app/app-header/app-header.component.scss
@@ -1,12 +1,9 @@
 :host {
 	grid-area: header;
-
-	display: flex;
-	align-items: center;
-	justify-content: space-evenly;
 	height: 100%;
 	width: 100%;
 
-	font-size: 2rem;
-	font-weight: bold;
+	> mat-toolbar {
+		justify-content: space-between;
+	}
 }
