--- a/src/styles/material-theme.scss
+++ b/src/styles/material-theme.scss
@@ -9,7 +9,7 @@
 $custom-typography: mat-typography-config(
 	$font-family: 'Garamond, sans-serif',
 	$headline:	mat-typography-level(32px, 48px, 700),
-	$title:		mat-typography-level(24px, 40px, 700),
+	$title:		mat-typography-level(32px, 48px, 700),
 	$body-1:	mat-typography-level(16px, 24px, 500),
 );
 
